# signwriting-evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
assets/: hello_signs.txt
signwriting_evaluation/evaluation/: closest_matches.py  closest_matches_table.py  closest_matches_table_latex.py
signwriting_evaluation/metrics/: base.py  bleu.py  chrf.py  clip.py  similarity.md  similarity.py  similarity_metrics.md  symbol_distance.md  symbol_distance.py  test_bleu.py  test_chrf.py  test_clip.py  test_float_returns.py  test_similarity.py  test_symbol_distance.py
