[project]
name = "signwriting-evaluation"
description = "Automatic Evaluation for SignWriting Machine Learning Outputs"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "signwriting @ git+https://github.com/sign-language-processing/signwriting", # For Symbol Distance
    "sacrebleu", # For BLEU and chrF
    "transformers", # For CLIP features extraction
    "diskcache", # For CLIP features caching
    "torch", # For CLIP
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    # to plot metric evaluation results
    "matplotlib",
    "numpy",
    "scipy"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]

[tool.pylint.typecheck]
generated-members = [
    "torch.*",
]

[tool.setuptools]
packages = [
    "signwriting_evaluation",
    "signwriting_evaluation.metrics",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_evaluation"]
